# obs-media-stream

./: .gitignore  PLAN.md  README.md
.github/workflows/: release.yml
desktop-app/: package.json
desktop-app/src/: settings.html
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
extension/: background.js  content.js  manifest.json  options.html  options.js  picker.js  popup.html  popup.js  stream-controller.js
helper/: config.js  media-store.js  obs.js  package.json  server.js
overlay/: index.html  overlay.css  overlay.js  stream.html  webrtc.html
