[package]
name = "obs-helper"
version = "4.1.0"
description = "OBS Helper Background Service"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tungstenite = "0.24"
url = "2.5"
tokio-tungstenite = "0.24"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
